# clubox-test

./: .env.example  docker-compose.yml  package-lock.json  package.json
bot/: pyproject.toml
bot/src/: bot.py  common.py  crud.py  server.py
bot/src/db/: db.py  schemas.py
bot/src/models/: user_model.py
front/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
front/src/: App.vue  main.ts
front/src/api/: index.ts
front/src/components/: NavBar.vue
front/src/components/ButtonLK/: ButtonLK.vue  Icon.vue
front/src/components/CalendarSlider/: CalendarSelectedItem.vue  CalendarSlider.vue  dateData.ts
front/src/components/ProfileInfo/: ProfileInfo.vue
front/src/components/Swiper/: Swiper.vue
front/src/screens/: BirthScreen.vue  HelloScreen.vue  LK.vue
front/src/store/: index.ts
front/src/types/: Button.types.ts  datePicker.types.ts  telegrammedWindow.types.ts  user.types.ts
