[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["Stanislav <sta-tun-slav@yandex.ru>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.scripts]
start = "src.func:start_bot"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
